完全重构：创建全新的1602英文版幸运轮盘应用
- 移除Firebase依赖，使用本地存储
- 添加霓虹灯效果和精美动画
- 实现精确的奖品概率控制（按要求设置）
- 添加双语支持（英文/中文）
- 集成社交分享功能（Facebook/WhatsApp）
- 添加工作人员管理面板
- 配置Vercel部署支持
- 完整的客户数据记录和管理功能

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "luckydraw-wheel-1602",
+  "name": "1602-lucky-draw",
   "version": "1.0.0",
-  "description": "1602 Lucky Draw Wheel Application",
+  "description": "1602 Lucky Draw Wheel Application for Kuching Festival",
   "main": "index.html",
   "scripts": {
-    "start": "firebase serve",
-    "build": "echo 'No build step required for static site'",
-    "deploy": "firebase deploy",
-    "serve": "firebase serve --host 0.0.0.0 --port 5000"
+    "start": "serve -s . -l 3000",
+    "build": "echo 'No build process needed for static site'",
+    "dev": "serve -s . -l 3000"
   },
   "keywords": [
     "lucky-draw",
     "wheel",
-    "firebase",
     "1602",
-    "craft-beer"
+    "kuching-festival",
+    "prize-wheel"
   ],
-  "author": "1602 Craft Beer",
+  "author": "1602 Team",
   "license": "MIT",
   "devDependencies": {
-    "firebase-tools": "^14.11.1"
+    "serve": "^14.2.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
